# QBDI

./: CMakeLists.txt
cmake/: config-win-X86_64.py
include/QBDI/: Callback.h  VM.h  VM_C.h
src/Engine/: Engine.cpp  Engine.h  VM.cpp  VM_C.cpp
src/ExecBlock/: ExecBlock.cpp  ExecBlock.h
src/ExecBroker/: ExecBroker.cpp  ExecBroker.h
src/Patch/: Trampoline.cpp  Trampoline.h
templates/qbdi_injector_template/: CMakeLists.txt  CMakeLists_win.txt  test_injector.c  test_injector2.c
tools/: CMakeLists.txt
tools/QBDInjector/: CMakeLists.txt  QBDInjector.cpp  QBDInjector.hpp  QBDInjector_linux.cpp
tools/QBDInjector/include/: GumInjected.h  Injected.h  Injector.h  QBDIGumInjector.h  QBDInjector.h  QBDInjector_common.h  QBDInjector_linux.h
tools/QBDInjector/src/: GumInjected.cpp  GumInjected_linux-X86_64.s  GumInjected_linux.c  GumInjected_win-X86_64.asm  GumInjected_win.c  Injected.c  Injected_linux.c  Injected_win.c  Injector.cpp  Injector_linux.cpp  Injector_win.cpp  common_linux.c  common_win.c
